# fsspec-xrootd

./: .buildinfo  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  reference.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.rst  reference.rst
src/fsspec_xrootd/: __init__.py  kwargTest.py  xrootd.py  xrtdTest5.py
tests/: File_Read_Feature_Tests.py  File_Write_Feature_Test.py  conftest.py  test_basicio.py  test_package.py
