[metadata]
name = fsspec_xrootd
description = xrootd implementation for fsspec
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CoffeaTeam/fsspec-xrootd
author = Scott Demarest
author_email = rockets1194@gmail.com
maintainer = CoffeaTeam admins
maintainer_email = rockets1194@gmail.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://fsspec_xrootd.readthedocs.io/
    Bug Tracker = https://github.com/CoffeaTeam/fsspec-xrootd/issues
    Discussions = https://github.com/CoffeaTeam/fsspec-xrootd/discussions
    Changelog = https://github.com/CoffeaTeam/fsspec-xrootd/releases

[options]
packages = find:
install_requires =
    fsspec
    typing-extensions>=3.7;python_version<'3.8'
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
fsspec.specs =
    root = fsspec_xrootd:XRootDFileSystem

[options.extras_require]
dev =
    pytest>=6
docs =
    Sphinx>=4.0
    myst-parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx-copybutton
test =
    pytest>=6

[flake8]
extend-ignore = E203, E501, E722, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
    noxfile.py: T
